--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -5,3 +5,21 @@ h1{
 .todos{
     margin: 10px;
 }
+
+.card-top{
+    text-align: center; 
+    font-size: 30px;
+}
+
+.card-main{
+    text-align: center;
+}
+
+.card-col{
+    margin-top:10px;
+}
+
+.card-delete{
+    float: right; 
+    margin-right: 10px;
+}
